--- a/index.html
+++ b/index.html
@@ -5,26 +5,20 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Formulário</title>
-    <script defer type="text/javascript" src="index.js"></script>
+    <script type="text/javascript" src="index.js"></script>
     <link rel="stylesheet" type="text/css" href="index.css" media="screen" />
-<style>
-
-</style>
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@100&display=swap" rel="stylesheet">
 </head>
 <body>
-<h1> Formulário </h1>
 <form>
-    <label for="Digite-name">Digite seu nome.</label>
-    <br>
-    <input id="Digite-name" type="text" placeholder="Ex:Stênio Sousa">
-    <br>
-    <label for="data">Data de nascimento</label>
-    <br>
-    <input id="data" type="date" >
-    <br>
-    <input id="submit" type="submit">
-    <p>Seja bem vindo(a) +nome+! </p>
+    <h2>Contate-nos</h2>
+    <input  type="text"  placeholder="Seu nome">
+    <input  type="tel" placeholder="Seu telefone"  >
+    <input  type="email"  placeholder="Seu E-mail">
+    <input  type="password" placeholder="Sua senha." >
+    <input  type="submit" value="Confirmar">
 </form>
-
 </body>
 </html>
