adesao de estatos

--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Formulário</title>
-    <script type="text/javascript" src="index.js" defer></script>
+    <script type="text/javascript" src="index.js" defer ></script>
     <link rel="stylesheet" type="text/css" href="index.css" media="screen" />
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -18,11 +18,11 @@
     <h2>Contate-nos</h2>
     <div>
         <i class="fa fa-user icon"></i>
-        <input  type="text" id="name"  placeholder="Seu nome">
+        <input type="text"  id="name"  placeholder="Seu nome">
     </div>
     <div>
         <i class="fa fa-phone" aria-hidden="true"></i>
-        <input  type="tel" placeholder="Seu telefone"  >
+        <input  type="tel"  placeholder="Seu telefone"  >
     </div>
     <div>
         <i class="fa fa-envelope icon"></i>
@@ -33,7 +33,7 @@
         <input  type="password" placeholder="Sua senha." >
     </div>
     <input  type="submit" id="enviar" value="Confirmar">
-    <p id="saudacao"></p>
+    <p id="estatos"></p>
 </form>
 </body>
 </html>
